create search func
